change homepage link for build

--- a/package.json
+++ b/package.json
@@ -45,5 +45,5 @@
   "devDependencies": {
     "gh-pages": "^6.0.0"
   },
-  "homepage": "http://scorfu.github.io/countries"
+  "homepage": "http://scorfu.github.io/Countries"
 }
