--- a/package.json
+++ b/package.json
@@ -45,5 +45,5 @@
   "devDependencies": {
     "gh-pages": "^6.0.0"
   },
-  "homepage": "https://scorfu.github.io/Countries"
+  "homepage": "https://scorfu.github.io/Countries/"
 }
